--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_NAME=gymnastic
+APP_ENV=production
+APP_KEY=base64:ZAJMslX4bqBchPDMDlUH0s9jNuKiG59V1DL1WqaBNTM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=projectwebservice-production.up.railway.app
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+DB_DATABASE=/app/database/database.sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
