--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=gymnastic
+APP_NAME=Gymnastic
 APP_ENV=production
 APP_KEY=base64:5Oqp1/WuJI00IsOrIPgOAUOyu3vdd01R8bPOs3mBMsQ=
-APP_DEBUG=true
-APP_URL=projectwebservice-production.up.railway.app
+APP_DEBUG=false
+APP_URL=//projectwebservice-production.up.railway.app
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
