--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-DB_DATABASE=/app/database/database.sqlite
+DB_DATABASE=database/database.sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
@@ -38,6 +38,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
+CACHE_DRIVER=file
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
